deployment/letsencrypt.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: ssl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack-invite
      role: ssl
  template:
    metadata:
      labels:
        app: slack-invite
        role: ssl
        time: "1128"
    spec:
      containers:
        - name: ssl
          image: malmaud/juliaslackssl:1.0
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            hostPort: 80
          volumeMounts:
            - mountPath: /etc/letsencrypt
              name: ssl-volume
      volumes:
        - name: ssl-volume
          hostPath:
            type: DirectoryOrCreate
            path: /etc/letsencrypt
