deployment/slack_frontend.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: slack-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack-invite
      role: frontend
  template:
    metadata:
      labels:
        app: slack-invite
        role: frontend
        time: "543"
    spec:
      containers:
        - name: frontend
          imagePullPolicy: Always
          image: malmaud/juliaslack:3.4
          ports:
          - containerPort: 4000
          volumeMounts:
          - name: secrets
            mountPath: /secrets
            readOnly: true
          resources:
            limits:
              cpu: "0m"
      volumes:
        - name: secrets
          secret:
            secretName: slack-secrets
            items:
            - key: secrets
              path: secrets.json
