deployment/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slack-frontend
spec:
  selector:
    app: slack-invite
    role: frontend
  ports:
    - targetPort: 4000
      port: 4000
  type: ClusterIP
