deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: slack-ingress
spec:
  backend:
    serviceName: slack-frontend
    servicePort: 4000
